--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   "author": "Gustavo Isensee <gustavo.isensee@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "jest"
   },
   "dependencies": {
     "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "mongoose": "^4.10.2"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
 }
